--- a/FS_project/index.html
+++ b/FS_project/index.html
@@ -292,11 +292,48 @@
                 grid.appendChild(card);
             });
 
-            backBtn.addEventListener('click', () => {
+            function goBack() {
                 pageContainer.classList.remove('view-hidden');
                 projectViewContainer.classList.add('view-hidden');
                 projectIframe.src = 'about:blank'; // Stop loading the previous page
+            }
+
+            backBtn.addEventListener('click', goBack);
+
+            // =================================================================
+            // START: معماری صحیح و یکپارچه برای مدیریت Backspace
+            // =================================================================
+
+            // ۱. گوش دادن به پیام از iframe فرزند (صفحه جزئیات)
+            // مسئولیت: بستن جزئیات و بازگشت به لیست کارت‌ها
+            window.addEventListener('message', function(event) {
+                // اطمینان از اینکه پیام معتبر است
+                if (event.data && event.data.type === 'CHILD_NAVIGATE_BACK') {
+                    goBack();
+                }
             });
+
+            // ۲. مدیریت Backspace در این صفحه (لیست کارت‌ها)
+            window.addEventListener('keydown', function(e) {
+                if (e.key === 'Backspace') {
+                    const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
+                    if (!isEditable) {
+                        e.preventDefault();
+                        // اگر در حال نمایش لیست کارت‌ها هستیم (و نه جزئیات پروژه)
+                        if (projectViewContainer.classList.contains('view-hidden')) {
+                            // به والد اصلی (صفحه فهرست) پیام بفرست
+                            window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
+                        } else {
+                            // اگر در حال نمایش جزئیات پروژه هستیم، با بک اسپیس برگرد
+                            goBack();
+                        }
+                    }
+                }
+            });
+            
+            // =================================================================
+            // END: معماری صحیح
+            // =================================================================
 
             // Interactive header chart logic
             const headerBox = document.querySelector('header > div');
@@ -320,75 +357,9 @@
                 chartIcon.style.opacity = '0.6';
             });
 
-            // Backspace key to go back
-            document.addEventListener('keydown', function(e) {
-                // Check if we are in the project view and the key is Backspace
-                if (!projectViewContainer.classList.contains('view-hidden') && e.key === 'Backspace') {
-                    e.preventDefault(); // Prevent browser from navigating back
-                    backBtn.click(); // Simulate a click on the back button
-                }
-            });
-          backBtn.addEventListener('click', goBack);
-
-        // =================================================================
-        // START: معماری صحیح و یکپارچه برای مدیریت Backspace
-        // =================================================================
-
-        // ۱. گوش دادن به پیام از iframe فرزند (صفحه جزئیات)
-        // مسئولیت: بستن جزئیات و بازگشت به لیست کارت‌ها
-        window.addEventListener('message', function(event) {
-            // اطمینان از اینکه پیام معتبر است
-            if (event.data && event.data.type === 'CHILD_NAVIGATE_BACK') {
-                goBack();
-            }
+            // Backspace key to go back - REMOVED OLD LOGIC
         });
-
-        // ۲. مدیریت Backspace در این صفحه (لیست کارت‌ها)
-        window.addEventListener('keydown', function(e) {
-            if (e.key === 'Backspace') {
-                const isEditable = e.target.isContentEditable || e.target.tagName === 'INPUT' || e.target.tagName === 'TEXTAREA';
-                if (!isEditable) {
-                    e.preventDefault();
-                    // اگر در حال نمایش لیست کارت‌ها هستیم (و نه جزئیات پروژه)
-                    if (projectViewContainer.classList.contains('view-hidden')) {
-                        // به والد اصلی (صفحه فهرست) پیام بفرست
-                        window.parent.postMessage({ type: 'NAVIGATE_BACK' }, '*');
-                    } else {
-                        // اگر در حال نمایش جزئیات پروژه هستیم، با بک اسپیس برگرد
-                        goBack();
-                    }
-                }
-            }
-        });
-        
-        // =================================================================
-        // END: معماری صحیح
-        // =================================================================
-
-        // --- بخش انیمیشن هدر (بدون تغییر) ---
-        const headerBox = document.querySelector('header > div');
-        const chartIcon = document.getElementById('header-chart-icon');
-        const bars = chartIcon.querySelectorAll('.bar');
-        const baseHeights = Array.from(bars).map(bar => parseFloat(bar.style.height));
-        headerBox.addEventListener('mousemove', (e) => {
-            const rect = headerBox.getBoundingClientRect();
-            const x = e.clientX - rect.left;
-            const mouseX = x / rect.width;
-            bars.forEach((bar, index) => {
-                const barX = (index + 0.5) / bars.length;
-                const proximity = Math.max(0, 1 - Math.abs(mouseX - barX) * 4);
-                const newHeight = 20 + proximity * 80;
-                bar.style.height = `${newHeight}%`;
-            });
-            chartIcon.style.opacity = '1';
-        });
-        headerBox.addEventListener('mouseleave', () => {
-            bars.forEach((bar, index) => { bar.style.height = `${baseHeights[index]}%`; });
-            chartIcon.style.opacity = '0.6';
-        });
-    });
     </script>
 </body>
 </html>
-
 
