--- a/Dashboard/Infra/index.html
+++ b/Dashboard/Infra/index.html
@@ -351,12 +351,12 @@
                 <p class="section-subtitle mx-auto">این پروژه‌های کلان و حیاتی، بخش عمده‌ای از بودجه کل را تشکیل می‌دهند. موس را روی هر کارت نگه دارید تا جزئیات نمایش داده شود.</p>
             </div>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <div class="details-card">
+<div class="details-card">
                     <div class="details-card-front">
                         <h3 class="font-bold text-lg mb-2">💡 تکمیل پست‌های برق و نیروگاه</h3>
                         <p class="text-4xl font-black text-gray-800">۱,۵۹۲.۰</p><p class="text-gray-500">میلیارد تومان</p>
                     </div>
-                    <div class="details-card-back"><h4>جزئیات پروژه برق</h4><ul><li>شبکه (۲۰kV و LV) <span>۴۶۲ م.ت</span></li><li>پست‌ها و ایستگاه‌ها <span>۱۴۰ م.ت</span></li><li>نیروگاه گازسوز <span>۴۴۸.۵ م.ت</span></li><li>ظرفیت نیروگاه <span>۱۵ مگاوات</span></li></ul></div>
+                    <div class="details-card-back"><h4>جزئیات پروژه برق</h4><ul><li>شبکه (۲۰kV و LV) <span>۴۶۲.۰ م.ت</span></li><li>پست‌ها و ایستگاه‌ها <span>۱۴۰.۰ م.ت</span></li><li>نیروگاه گازسوز <span>۴۴۸.۵ م.ت</span></li><li>سایر هزینه‌ها (بالاسری، بیمه و...) <span>۵۴۱.۵ م.ت</span></li><li>ظرفیت نیروگاه <span>۱۵ مگاوات</span></li></ul></div>
                 </div>
                 <div class="details-card">
                     <div class="details-card-front">
