--- a/DashboardNA/index.html
+++ b/DashboardNA/index.html
@@ -457,10 +457,10 @@
                 });
 
                 const totalCardHTML = `
-                    <div class="infra-card **bg-indigo-900** text-white p-6 rounded-xl shadow-lg border **border-indigo-700** md:col-span-3">
+                    <div class="infra-card bg-indigo-900 text-white p-6 rounded-xl shadow-lg border border-indigo-700 md:col-span-3">
                         <div class="flex items-center justify-between">
                             <h3 class="text-xl font-semibold">جمع کل هزینه های پروژه</h3>
-                            <div class="flex-shrink-0 w-12 h-12 rounded-full flex items-center justify-center **bg-indigo-800**">
+                            <div class="flex-shrink-0 w-12 h-12 rounded-full flex items-center justify-center bg-indigo-800">
                                 <i data-lucide="sigma" class="w-6 h-6 text-cyan-400"></i>
                             </div>
                         </div>
