--- a/DashboardNA/index.html
+++ b/DashboardNA/index.html
@@ -456,20 +456,20 @@
                     `;
                 });
 
-               const totalCardHTML = `
-                    <div class="infra-card bg-indigo-900 text-white p-6 rounded-xl shadow-lg border border-indigo-700 md:col-span-3">
-                        <div class="flex items-center justify-between">
-                            <h3 class="text-xl font-semibold">جمع کل هزینه های پروژه</h3>
-                            <div class="flex-shrink-0 w-12 h-12 rounded-full flex items-center justify-center bg-indigo-800">
-                                <i data-lucide="sigma" class="w-6 h-6 text-cyan-400"></i>
-                            </div>
-                        </div>
-                        <div class="mt-4 text-center">
-                            <p class="text-base text-slate-400 mb-2">مبلغ نهایی (میلیارد تومان)</p>
-                            <p class="text-4xl md:text-5xl font-bold text-white tracking-tight">${(grandTotal / 1000).toLocaleString('fa-IR', { minimumFractionDigits: 1, maximumFractionDigits: 1 })}</p>
-                        </div>
-                    </div>
-                `;
+              const totalCardHTML = `
+  <div class="infra-card bg-indigo-800 text-white p-6 rounded-xl shadow-lg border border-slate-700 md:col-span-3">
+    <div class="flex items-center justify-between">
+      <h3 class="text-xl font-semibold">جمع کل هزینه های پروژه</h3>
+      <div class="flex-shrink-0 w-12 h-12 rounded-full flex items-center justify-center bg-indigo-700">
+        <i data-lucide="sigma" class="w-6 h-6 text-cyan-400"></i>
+      </div>
+    </div>
+    <div class="mt-4 text-center">
+      <p class="text-base text-slate-400 mb-2">مبلغ نهایی (میلیارد تومان)</p>
+      <p class="text-4xl md:text-5xl font-bold text-white tracking-tight">${(grandTotal / 1000).toLocaleString('fa-IR', { minimumFractionDigits: 1, maximumFractionDigits: 1 })}</p>
+    </div>
+  </div>
+`;
                 
                 container.innerHTML = `
                     <h3 class="text-xl font-bold text-center text-indigo-900 mb-4 mt-10">داشبورد برآورد هزینه‌های کلان پروژه</h3>
